DFG inlining sometimes fails to reset constant references https://bugs.webkit.org/show_bug.cgi?id=70668

Source/JavaScriptCore: 

Reviewed by Anders Carlsson.
        
Reset constant references when we need to (new block created) and not
when we don't (change of inlining depth).

* dfg/DFGByteCodeParser.cpp:
(JSC::DFG::ByteCodeParser::handleInlining):
(JSC::DFG::ByteCodeParser::prepareToParseBlock):
(JSC::DFG::ByteCodeParser::parseBlock):
(JSC::DFG::ByteCodeParser::parseCodeBlock):

LayoutTests: 

Reviewed by Anders Carlsson.
        
Added a new test that covers this specific bug as well as the general
ability to perform inlining, and the ability to OSR out of an inline
stack.

* fast/js/dfg-inline-constant-expected.txt: Added.
* fast/js/dfg-inline-constant.html: Added.
* fast/js/script-tests/dfg-inline-constant.js: Added.
(foo):
(bar):



git-svn-id: svn://svn.chromium.org/blink/trunk@98188 bbb929c8-8fbe-4397-9dbb-9b2b20218538